--- a/Styles/texasscripturefeststylesheet.css
+++ b/Styles/texasscripturefeststylesheet.css
@@ -139,7 +139,7 @@ body {
     background-color: black;
     justify-content: center;
     text-align: center;
-    background-image: url('/assets/Images/IMG_0173.JPG');
+    background-image: url('./assets/Images/IMG_0173.JPG');
     background-size: auto;
     background-position: center;
     background-repeat: repeat-y;
