--- a/texasscripturefeststylesheet.css
+++ b/texasscripturefeststylesheet.css
@@ -1,9 +1,9 @@
-@import url("https://use.typekit.net/div3bfo.css");
+/*@import url("https://use.typekit.net/div3bfo.css");
 * {
     font-family: drunk-cowboy, sans-serif !important;
     font-weight: 400;
     font-style: normal;
-}
+}*/
 header {
     color: rgb(0, 0, 0);
     background-color: rgb(255, 255, 255);
